Refactor: 리팩토링